--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -65,7 +65,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\GameControl\CameraFollow.cs" />
+    <Compile Include="Assets\Scripts\GameControl\Director.cs" />
     <Compile Include="Assets\Scripts\GameControl\GameController.cs" />
+    <Compile Include="Assets\Scripts\GameControl\MapGrid.cs" />
+    <Compile Include="Assets\Scripts\PathFind\Heap.cs" />
+    <Compile Include="Assets\Scripts\PathFind\Node.cs" />
+    <Compile Include="Assets\Scripts\PathFind\PathFinder.cs" />
     <Compile Include="Assets\Scripts\Projectiles\Explosion.cs" />
     <Compile Include="Assets\Scripts\Projectiles\IProjectiles.cs" />
     <Compile Include="Assets\Scripts\Projectiles\Projectile.cs" />
