--- a/Tests.csproj
+++ b/Tests.csproj
@@ -64,6 +64,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Tests\CoverTest.cs" />
     <Compile Include="Assets\Tests\MapTest.cs" />
     <Compile Include="Assets\Tests\PathfindTest.cs" />
     <None Include="Assets\Tests\Tests.asmdef" />
